--- a/src/components/ExataImage.css
+++ b/src/components/ExataImage.css
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  z-index: 1;
 }
 
 .exata-image__img {
